--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
-/* GLOBAL STYLES
--------------------------------------------------- */
-/* Padding below the footer and lighter body text */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -11,21 +10,34 @@ body {
   color: #5a5a5a;
 }
 
+ul {
+  list-style-type: none;
+  padding: 0;
+  text-align: center;
+}
 
-/* CUSTOMIZE THE CAROUSEL
--------------------------------------------------- */
+p,
+h1 {
+  font-family: "Montserrat", sans-serif;
+}
 
-/* Carousel base class */
+#navigation {
+  font-family: "Playfair Display", serif;
+}
+
+.hero-image {
+  z-index: 0;
+}
+
 .carousel {
   margin-bottom: 4rem;
 }
-/* Since positioning the image, we need to help out the caption */
 .carousel-caption {
+  text-shadow: 2px 2px 4px #000000;
   bottom: 3rem;
-  z-index: 10;
+  z-index: 1;
 }
 
-/* Declare heights because of positioning of img element */
 .carousel-item {
   height: 32rem;
 }
@@ -37,11 +49,22 @@ body {
   height: 32rem;
 }
 
+.rounded-circle {
+  margin-bottom: 1em;
+}
 
-/* MARKETING CONTENT
--------------------------------------------------- */
+.vision p {
+  text-align: left;
+}
 
-/* Center align the text within the three columns below the carousel */
+.vision li {
+  list-style-type: disc;
+}
+
+.values {
+  padding: 0;
+}
+
 .marketing .col-lg-4 {
   margin-bottom: 1.5rem;
   text-align: center;
@@ -50,31 +73,33 @@ body {
   font-weight: 400;
 }
 .marketing .col-lg-4 p {
-  margin-right: .75rem;
-  margin-left: .75rem;
+  margin-right: 0.75rem;
+  margin-left: 0.75rem;
 }
-
-
-/* Featurettes
-------------------------- */
 
 .featurette-divider {
-  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+  margin: 3rem 0;
 }
 
-/* Thin out the marketing headings */
 .featurette-heading {
   font-weight: 300;
-  line-height: 1;
-  letter-spacing: -.05rem;
+  line-height: 1.5em;
+  letter-spacing: -0.05rem;
 }
 
+.subjects {
+  text-align: center;
+}
 
-/* RESPONSIVE CSS
--------------------------------------------------- */
+#contact {
+  margin-top: 3em;
+}
+
+#footer p {
+  text-align: start;
+}
 
 @media (min-width: 40em) {
-  /* Bump up size of carousel content */
   .carousel-caption p {
     margin-bottom: 1.25rem;
     font-size: 1.25rem;
@@ -92,8 +117,10 @@ body {
   }
 }
 
-input[type=text], select, textarea {
-  width: 100%
+input[type="text"],
+select,
+textarea {
+  width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -102,7 +129,7 @@ input[type=text], select, textarea {
   resize: vertical;
 }
 
-input[type=submit] {
+input[type="submit"] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
