--- a/css/styles.css
+++ b/css/styles.css
@@ -16,12 +16,12 @@ ul {
   text-align: center;
 }
 
-p,
-h1 {
+p {
   font-family: "Montserrat", sans-serif;
 }
 
-#navigation {
+#navigation,
+h1 {
   font-family: "Playfair Display", serif;
 }
 
